# songsearch

./: README.md  pyproject.toml
models/: htdemucs_ft_vocals.yaml
songsearch/: __main__.py  songsearch.py  utils.py
songsearch/repository/: tracks.py
songsearch/transform/: grapheme_to_phoneme.py  separate_audio.py  speach_to_text.py  utils.py
